--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,9 @@
   <body>
     <div>
       <include src="./partials/header.html"></include>
-      <include src="./partials/main.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/projects.html"></include>
+      <include src="./partials/contact.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
     <script src="./assets/js/main.js"></script>
